carecareers.scss
@import "global/functions";
@import "variables";

$carecareers_button_text_green: rgb(18,73,34);
$carecareers_green: #9DCC47;
$carecareers_dark-green: #124922;
$carecareers_blue: #177EB0;
$carecareers_grey: rgb(60,60,59);

$header-color: #ffffff; // Column_B
$header-text-color: #000000; // Column_C
$header-utilitymenu-color: #177EB0; // Column_D
//$header-utilitymenu-text-color: #177EB0;

$burger-menu-color: $carecareers_button_text_green; // Column_E

$header-mobilemenu-text-alignment: left !default; //Column_F
$breadcrumb-color: #eeefef;  // Column_G
$breadcrumb-text-color: #000000; // Column_H
$breadcrumb-border-color: #f6f6f6; // Column_I
$breadcrumb-chevron: $breadcrumb-chevron-black; // Column_J

$search-border-color: #ccc ; // Column_K
$button-search-color : $carecareers_button_text_green; // magnifying glass icon
$button-search-background-color: $carecareers_green; // Column_R

$button-panel-color: $carecareers_green; // Column_S
$button-panel-text-color: darken( $carecareers_green, 20% ); // Column_T
$button-dark-panel-text-color: $carecareers_green;  // Column_U
$button-dark-panel-color: #050505;  // Column_V

$button-primary-color: $carecareers_green;
$button-primary-color-hov: darken( $carecareers_green, 25% );
$button-primary-text-color: $carecareers_button_text_green;

$button-secondary-color: $carecareers_blue;
$button-secondary-color-hov: #fff;
$button-inverted-secondary-color: #fff;
$button-inverted-secondary-color-hov: #3c3c3c;

$footer-border-color: $white;
$footer-background-color: linear-gradient(90deg, rgba(4,64,125,1) 0%, rgba(1,35,93,1) 100%); // Column_L
$footer-color: #ffffff; // Column_M

$footer-first-column-count: 1;
$footer-first-column-width: 33%;

@import 
"global-import";

@import
"global/navbar";

/*====================================================================================
Header completed
====================================================================================*/
// pill button
.utilitymenu--top .utilitymenu__link {
    background-color: $header-utilitymenu-color;
    color: #fff;
    border-radius: 15px;
    border: 0;

    &:hover {
        background-color: $header-utilitymenu-color;
        @extend .btn-hover;
        color: #fff;
    }

    &:focus {
        background-color: $focus-color;
        color: $black;
    }
}
// pill button end

.sitemenu__btn--haschildren::after { color: black;}

// seperator line in header above menu
#headermainmenu {
    border-top: solid 1px #d2d2d2;
}

// logo size
.gi-sitelogo, .gi-sitelogo__link {
    width: 106px;
    padding-bottom: 5px;
}

/*====================================================================================
Header completed
====================================================================================*/

.card__actions .cta-link--stage, .a-panel--pt.a-panel--stage .a-panel__link {
    color: $carecareers_button_text_green;
    &:hover {
        color: white;
    }
}

/*====================================================================================
Button shapes
====================================================================================*/

/* secondary buttons rounded */
.a-body__link--cta, .a-body__link--btn-primary-std, .a-body__link--btn-primary-std-dwn,
.a-body__link--btn-primary-lge, .a-body__link--btn-primary-teal-std, .a-body__link--btn-primary-teal-lge,
.a-body__link--btn-secondary, .a-body__link--btn-inverted-secondary
{
    border-radius: 30px;
}

/* default template button - more pill shaped */
.a-panel .a-panel__content .a-panel__link {
    border-radius: 30px;
}

/*====================================================================================
Panel Button shapes
====================================================================================*/
/* panel button full width */

.a-panel.a-panel--pt.a-panel--stage .card__actions {
    align-self:inherit;

}

.a-panel.a-panel--pt.a-panel--stage .card__actions .cta-link--stage {
    text-align:center;
    color: $carecareers_button_text_green;
    border-radius: 15px;
    padding: 14px;

    &:hover {
        background-color: $button-primary-color-hov;
    }

    &:focus {
        background-color: $focus-color;
    }
}

/*====================================================================================
search template button settings
====================================================================================*/

// search template pill right-end
.gi-sitesearch--pt .gi-sitesearch__container .gi-sitesearch__searchtoggle .gi-sitesearch__button--search
    {
        border-top-right-radius: 30px;
        border-bottom-right-radius: 30px;
    }

/*====================================================================================
cta and other in-page fake buttons hover colour
====================================================================================*/

a.a-body__link--cta:hover, a.a-body__link--btn-primary-std:hover, a.a-body__link--btn-primary-std-dwn:hover, a.a-body__link--btn-primary-lge:hover
{
    color: white;
}

/*====================================================================================
teal button?!
====================================================================================*/

a.a-body__link--btn-primary-teal-std, 
a.a-body__link--btn-primary-teal-lge {
    background-color: $carecareers_button_text_green;
    color: white !important;
}

a.a-body__link--btn-primary-teal-std:hover, 
a.a-body__link--btn-primary-teal-lge:hover {
    background-color: darken($carecareers_button_text_green, 10% );
    color: white !important;
}

a.a-body__link--btn-primary-teal-std:focus, 
a.a-body__link--btn-primary-teal-lge:focus {
    background-color: $focus-color;
    color: $black !important;
}
/* ... */

